dark mode minor fixes

--- a/src/DarkMode.scss
+++ b/src/DarkMode.scss
@@ -13,7 +13,7 @@ html body.dark-mode {
     /* Windows styling */
     .window {
         background-color: #202020;
-        border: 2px solid #0055E5;
+        border: 2px solid #eeeeee;
         box-shadow: 2px 4px 15px rgba(0, 0, 0, 0.5);
     }
 
@@ -100,8 +100,9 @@ html body.dark-mode {
 
     /* Taskbar */
     .taskbar {
-        background-color: #202020;
-        border-top: 2px solid #333333;
+        background: #202020 !important;
+        border-top: 2px solid #333333 !important;
+        box-shadow: 0px -2px 5px rgba(0, 0, 0, 0.3) !important;
     }
     
     .start-button {
@@ -115,7 +116,7 @@ html body.dark-mode {
     }
     
     .taskbar-time {
-        background-color: #333333;
+        // background-color: #333333;
         color: #f0f0f0;
         border-color: #222222 #444444 #444444 #222222;
     }
