--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -30,7 +30,7 @@
 
 .taskbar-time 
 {
-    background-color: #2E4053;
+    // background-color: #2E4053;
     padding: 5px;
     border-radius: 2px;
 }
